--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
 
         .nav-menu {
             display: flex;
-            gap: 20px;
+            gap: 25px;
             font-size: 1.3em;
             align-items: center;
         }
@@ -44,7 +44,7 @@
 
         .help-signup {
             display: flex;
-            gap: 15px;
+            gap: 20px;
             font-size: 1.3em;
         }
 
@@ -242,6 +242,7 @@
                 <a href="#">Women</a>
                 <a href="#">Kids</a>
                 <a href="#">Shoes</a>
+                <a href="#">Sports</a>
             </div>
         </div>
         <div class="help-signup">
