--- a/homepage.html
+++ b/homepage.html
@@ -233,7 +233,7 @@
     <div class="header">
         <div class="header-left">
             <div class="logo">
-                <a href="s.html">
+                <a href="homepage.html">
                     <img src="logo.jpeg" alt="Athletix">
                 </a>
             </div>
