--- a/homepage.html
+++ b/homepage.html
@@ -238,10 +238,10 @@
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Shoes</a>
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
                 <a href="#">Sports</a>
             </div>
         </div>
@@ -326,19 +326,19 @@
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
                 <ul>
-                    <li><a href="/footwear">Men</a></li>
-                    <li><a href="/clothing">Women</a></li>
-                    <li><a href="/accessories">Kids</a></li>
-                    <li><a href="/accessories">Shoes</a></li>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>SPORTS</h3>
                 <ul>
-                    <li><a href="/cricket">Cricket</a></li>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
                     <li><a href="/running">Running</a></li>
-                    <li><a href="/football">Football</a></li>
-                    <li><a href="/basketball">Basketball</a></li>
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
             </div>
 
