--- a/homepage.html
+++ b/homepage.html
@@ -298,7 +298,7 @@
             SELECT YOUR SPORT, FIND YOUR GEAR, AND GET IN THE GAME!
         </h2>
         <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
-            <a href="/cricket" style="text-align: center; text-decoration: none; color: black;">
+            <a href="cricket_athletix.html" style="text-align: center; text-decoration: none; color: black;">
                 <img src="images/cricket.jpg" alt="Cricket" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">CRICKET</div>
             </a>
@@ -306,11 +306,11 @@
                 <img src="images/running.jpg" alt="Running" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">RUNNING</div>
             </a>
-            <a href="/football" style="text-align: center; text-decoration: none; color: black;">
+            <a href="football_athletix.html" style="text-align: center; text-decoration: none; color: black;">
                 <img src="images/football.jpg" alt="Football" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">FOOTBALL</div>
             </a>
-            <a href="/basketball" style="text-align: center; text-decoration: none; color: black;">
+            <a href="basketball_athletix.html" style="text-align: center; text-decoration: none; color: black;">
                 <img src="images/basketball.jpg" alt="Basketball" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">BASKETBALL</div>
             </a>
