--- a/homepage.html
+++ b/homepage.html
@@ -294,17 +294,13 @@
     </div>
 
     <div style="padding: 40px 10%; font-family: Arial, sans-serif;">
-        <h2 style="font-weight: bold; font-size: 24px; margin-bottom: 30px;">
+        <h2 style="font-weight: bold; font-size: 24px; margin-bottom: 30px;text-align: center;">
             SELECT YOUR SPORT, FIND YOUR GEAR, AND GET IN THE GAME!
         </h2>
         <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
             <a href="cricket_athletix.html" style="text-align: center; text-decoration: none; color: black;">
                 <img src="images/cricket.jpg" alt="Cricket" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">CRICKET</div>
-            </a>
-            <a href="/running" style="text-align: center; text-decoration: none; color: black;">
-                <img src="images/running.jpg" alt="Running" style="width: 200px; height: 280px; object-fit: cover;">
-                <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">RUNNING</div>
             </a>
             <a href="football_athletix.html" style="text-align: center; text-decoration: none; color: black;">
                 <img src="images/football.jpg" alt="Football" style="width: 200px; height: 280px; object-fit: cover;">
@@ -336,7 +332,7 @@
                 <h3>SPORTS</h3>
                 <ul>
                     <li><a href="cricket_athletix.html">Cricket</a></li>
-                    <li><a href="/running">Running</a></li>
+                    
                     <li><a href="football_athletix.html">Football</a></li>
                     <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
