--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -4,6 +4,7 @@
 <head>
     <title>Basketball - Athletix</title>
     <style>
+        <link rel="stylesheet" href="main.css">
         body {
             margin: 0;
             font-family: Arial, sans-serif;
