--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -4,7 +4,7 @@
 <head>
     <title>Basketball - Athletix</title>
     <style>
-        <link rel="stylesheet" href="main.css">
+        
        body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -61,10 +61,46 @@
 
 
         .main-content {
-            background-color: #fff;
-            color: #000;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #000;
+            color: #fff;
             padding: 20px;
         }
+
+        .main-content img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .main-content .text-content {
+            max-width: 30%;
+        }
+
+        .main-content .text-content h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        .main-content .text-content p {
+            font-size: 1.2em;
+        }
+
+        .main-content .text-content a {
+            display: inline-block;
+            margin: 10px 5px;
+            padding: 10px 20px;
+            background-color: #fff;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .main-content .text-content a:hover {
+            background-color: #ddd;
+        }
+
 
         .main-content h1 {
             text-align: center;
