--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -4,7 +4,10 @@
 <head>
     <title>Basketball - Athletix</title>
     <style>
-        
+       * {
+            font-family: Arial, sans-serif;
+       }
+ 
        body {
             margin: 0;
             font-family: Arial, sans-serif;
