--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -94,8 +94,8 @@
             display: inline-block;
             margin: 10px 5px;
             padding: 10px 20px;
-            background-color: #fff;
-            color: #000;
+            background-color: #000;
+            color: #fff;
             text-decoration: none;
             border-radius: 5px;
         }
