--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -101,7 +101,7 @@
         }
 
         .main-content .text-content a:hover {
-            background-color: #ddd;
+            background-color: #000;
         }
 
 
