--- a/football_athletix.html
+++ b/football_athletix.html
@@ -4,7 +4,12 @@
 <head>
     <title>Football - Athletix</title>
     <style>
-        body {
+        <style>
+        * {
+            font-family: Arial, sans-serif;
+       }
+ 
+       body {
             margin: 0;
             font-family: Arial, sans-serif;
         }
@@ -19,10 +24,34 @@
             border-bottom: 1px solid #ccc;
         }
 
+        .header-left {
+            display: flex;
+            align-items: center;
+            gap: 550px;
+        }
+
+        .logo img {
+            height: 30px;
+        }
+
+        .nav-menu {
+            display: flex;
+            gap: 25px;
+            font-size: 1.3em;
+            align-items: center;
+        }
+
+        .nav-menu a {
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+            align-items: center;
+        }
+
         .help-signup {
             display: flex;
-            gap: 15px;
-            font-size: 0.9em;
+            gap: 20px;
+            font-size: 1.3em;
         }
 
         .help-signup a {
@@ -34,59 +63,48 @@
             text-decoration: underline;
         }
 
-        .logo img {
-            height: 30px;
-        }
 
-        .nav-menu {
+        .main-content {
             display: flex;
-            gap: 20px;
-        }
-
-        .nav-menu a {
-            text-decoration: none;
-            color: #ffffff;
-            font-weight: bold;
-        }
-
-        .search-bar {
-            display: flex;
+            justify-content: space-between;
             align-items: center;
-            border: 1px solid #ccc;
-            padding: 5px;
+            background-color: #000;
+            color: #fff;
+            padding: 20px;
+        }
+
+        .main-content img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .main-content .text-content {
+            max-width: 30%;
+        }
+
+        .main-content .text-content h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+
+        .main-content .text-content p {
+            font-size: 1.2em;
+        }
+
+        .main-content .text-content a {
+            display: inline-block;
+            margin: 10px 5px;
+            padding: 10px 20px;
+            background-color: #000;
+            color: #fff;
+            text-decoration: none;
             border-radius: 5px;
         }
 
-        .search-bar input {
-            border: none;
-            outline: none;
+        .main-content .text-content a:hover {
+            background-color: #000;
         }
 
-        .icons {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .notification {
-            position: relative;
-        }
-
-        .notification-badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background-color: yellow;
-            border-radius: 50%;
-            padding: 2px 5px;
-            font-size: 12px;
-        }
-
-        .main-content {
-            background-color: #fff;
-            color: #000;
-            padding: 20px;
-        }
 
         .main-content h1 {
             text-align: center;
@@ -125,18 +143,13 @@
             border-radius: 10px;
             cursor: pointer;
         }
-
-        footer {
-            background-color: #000;
-            text-align: center;
-        }
-
         .promo-banner {
             background-color: #F7E146;
             color: #000;
             padding: 20px 0;
             font-size: 18px;
             font-weight: bold;
+            text-align: center;
         }
 
         .promo-banner button {
@@ -147,6 +160,11 @@
             cursor: pointer;
             font-size: 16px;
             font-weight: bold;
+        }
+
+        footer {
+            background-color: #000;
+            text-align: center;
         }
 
         .footer-content {
@@ -160,6 +178,7 @@
 
         .footer-column {
             width: 15%;
+            color: #ccc;
         }
 
         .footer-column h3 {
@@ -179,12 +198,26 @@
             cursor: pointer;
         }
 
-        .footer-column ul li:hover {
+        .footer-column ul li a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column ul li a:hover {
             text-decoration: underline;
         }
 
         .footer-column.social {
             text-align: left;
+        }
+
+        .footer-column.social a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-column.social a:hover {
+            text-decoration: underline;
         }
 
         .footer-bottom {
@@ -193,40 +226,49 @@
             font-size: 12px;
             color: #ccc;
         }
+
+        .icons {
+            display: flex;
+            align-items: center;
+            gap: 1px;
+            height: 40px;
+            width: auto;
+        }
+
+        .icons img {
+            height: 30px;
+            width: 30px;
+            object-fit: contain;
+        }
+
     </style>
 </head>
 
 <body>
+    <body>
     <div class="header">
+        <div class="header-left">
+            <div class="logo">
+                <a href="homepage.html">
+                    <img src="logo.jpeg" alt="Athletix">
+                </a>
+            </div>
+            <div class="nav-menu">
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
+            </div>
+        </div>
         <div class="help-signup">
             <a href="#">Help</a>
-            <a href="#">Orders and Returns</a>
-            <a href="#">Sign Up</a>
+            <a href="#">Orders</a>
             <a href="#">Log In</a>
-        </div>
-        <div class="logo">
-            <img src="fav.jpeg" alt="Athletix">
-        </div>
-        <div class="nav-menu">
-            <a href="#">Shoes</a>
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
-            <a href="#">Sports</a>
-            <a href="#">Lifestyle</a>
-            <a href="#">Outlet</a>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search">
-            <img src="search-icon.png" alt="Search">
-        </div>
-        <div class="icons">
-            <div class="notification">
-                <img src="user-icon.png" alt="User Icon">
-                <div class="notification-badge">1</div>
+            <div class="logo">
+                <a href="cart.html">
+                    <img src="cart.jpeg" alt="Cart" class="cart-icon">
+                </a>
             </div>
-            <img src="favorites-icon.png" alt="Favorites">
-            <img src="cart-icon.png" alt="Cart">
         </div>
     </div>
 
@@ -286,60 +328,44 @@
         </div>
         <div class="footer-content">
             <div class="footer-column">
-                <h3>PRODUCTS</h3>
+                <h3>CATEGORIES</h3>
                 <ul>
-                    <li>Footwear</li>
-                    <li>Clothing</li>
-                    <li>Accessories</li>
-                    <li>Outlet-Sale</li>
-                    <li>New Arrivals</li>
-                    <li>Flat 50% Off!</li>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>SPORTS</h3>
                 <ul>
-                    <li>Cricket</li>
-                    <li>Running</li>
-                    <li>Football</li>
-                    <li>Gym/Training</li>
-                    <li>Tennis</li>
-                    <li>Outdoor</li>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
+                    
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h3>COLLECTIONS</h3>
-                <ul>
-                    <li>Ultraboost</li>
-                    <li>Superstar</li>
-                    <li>NMD</li>
-                    <li>Stan Smith</li>
-                    <li>Predator</li>
-                </ul>
-            </div>
+
             <div class="footer-column">
                 <h3>SUPPORT</h3>
                 <ul>
-                    <li>Help</li>
-                    <li>Customer Service</li>
-                    <li>Returns & Exchanges</li>
-                    <li>Shipping</li>
-                    <li>Order Tracker</li>
+                    <li><a href="/help">Help</a></li>
+                    <li><a href="/customer-service">Customer Service</a></li>
+                    <li><a href="/returns">Returns & Exchanges</a></li>
+                    <li><a href="/shipping">Shipping</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>COMPANY INFO</h3>
                 <ul>
-                    <li>About Us</li>
-                    <li>Athletix Apps</li>
-                    <li>Entity Details</li>
-                    <li>Press</li>
-                    <li>Careers</li>
+                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/entity-details">Entity Details</a></li>
                 </ul>
             </div>
             <div class="footer-column social">
                 <h3>FOLLOW US</h3>
-                <p>📷 Instagram</p>
+                <p><a href="https://www.instagram.com" target="_blank">📷 Instagram</a></p>
+                <p><a href="https://www.twitter.com" target="_blank">🐦‍⬛ X</a></p>
             </div>
         </div>
         <div class="footer-bottom">
@@ -347,6 +373,8 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
+</body>
+</html>
 </body>
 
 </html>
