--- a/homepage.html
+++ b/homepage.html
@@ -245,9 +245,9 @@
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
+            <a href="help.html">Help</a>
             <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
