--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -244,35 +244,28 @@
 
 <body>
     <div class="header">
-        <div class="help-signup">
-            <a href="#">Help</a>
-            <a href="#">Orders and Returns</a>
-            <a href="#">Sign Up</a>
-            <a href="#">Log In</a>
-        </div>
-        <div class="logo">
-            <img src="fav.jpeg" alt="Athletix">
-        </div>
-        <div class="nav-menu">
-            <a href="#">Shoes</a>
-            <a href="#">Men</a>
-            <a href="#">Women</a>
-            <a href="#">Kids</a>
-            <a href="#">Sports</a>
-            <a href="#">Lifestyle</a>
-            <a href="#">Outlet</a>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Search">
-            <img src="search-icon.png" alt="Search">
-        </div>
-        <div class="icons">
-            <div class="notification">
-                <img src="user-icon.png" alt="User Icon">
-                <div class="notification-badge">1</div>
+        <div class="header-left">
+            <div class="logo">
+                <a href="homepage.html">
+                    <img src="logo.jpeg" alt="Athletix">
+                </a>
             </div>
-            <img src="favorites-icon.png" alt="Favorites">
-            <img src="cart-icon.png" alt="Cart">
+            <div class="nav-menu">
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
+            </div>
+        </div>
+        <div class="help-signup">
+            <a href="help.html">Help</a>
+            <a href="#">Orders</a>
+            <a href="signup.html">Log In</a>
+            <div class="logo">
+                <a href="cart.html">
+                    <img src="cart.jpeg" alt="Cart" class="cart-icon">
+                </a>
+            </div>
         </div>
     </div>
 
@@ -352,60 +345,44 @@
         </div>
         <div class="footer-content">
             <div class="footer-column">
-                <h3>PRODUCTS</h3>
+                <h3>CATEGORIES</h3>
                 <ul>
-                    <li>Footwear</li>
-                    <li>Clothing</li>
-                    <li>Accessories</li>
-                    <li>Outlet-Sale</li>
-                    <li>New Arrivals</li>
-                    <li>Flat 50% Off!</li>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>SPORTS</h3>
                 <ul>
-                    <li>Cricket</li>
-                    <li>Running</li>
-                    <li>Football</li>
-                    <li>Gym/Training</li>
-                    <li>Tennis</li>
-                    <li>Outdoor</li>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
+                    
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
             </div>
-            <div class="footer-column">
-                <h3>COLLECTIONS</h3>
-                <ul>
-                    <li>Ultraboost</li>
-                    <li>Superstar</li>
-                    <li>NMD</li>
-                    <li>Stan Smith</li>
-                    <li>Predator</li>
-                </ul>
-            </div>
+
             <div class="footer-column">
                 <h3>SUPPORT</h3>
                 <ul>
-                    <li>Help</li>
-                    <li>Customer Service</li>
-                    <li>Returns & Exchanges</li>
-                    <li>Shipping</li>
-                    <li>Order Tracker</li>
+                    <li><a href="help.html">Help</a></li>
+                    <li><a href="customer.html">Customer Service</a></li>
+                    <li><a href="return.html">Returns & Exchanges</a></li>
+                    <li><a href="shipping.html">Shipping</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>COMPANY INFO</h3>
                 <ul>
-                    <li>About Us</li>
-                    <li>Athletix Apps</li>
-                    <li>Entity Details</li>
-                    <li>Press</li>
-                    <li>Careers</li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="entity.html">Entity Details</a></li>
                 </ul>
             </div>
             <div class="footer-column social">
                 <h3>FOLLOW US</h3>
-                <p>📷 Instagram</p>
+                <p><a href="https://www.instagram.com" target="_blank">📷 Instagram</a></p>
+                <p><a href="https://www.twitter.com" target="_blank">🐦‍⬛ X</a></p>
             </div>
         </div>
         <div class="footer-bottom">
