--- a/help.html
+++ b/help.html
@@ -68,22 +68,21 @@
     <div class="header">
         <div class="header-left">
             <div class="logo">
-                <a href="s.html">
+                <a href="homepage.html">
                     <img src="logo.jpeg" alt="Athletix">
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Shoes</a>
-                <a href="#">Sports</a>
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
             </div>
         </div>
         <div class="help-signup">
-            <a href="#">Help</a>
+            <a href="help.html">Help</a>
             <a href="#">Orders</a>
-            <a href="#">Log In</a>
+            <a href="signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -135,41 +134,44 @@
     </div>
 
     <footer>
- 
+        <div class="promo-banner">
+            <p>JOIN Athletix AND GET 10% OFF</p>
+            <button>Sign Up for Free →</button>
+        </div>
         <div class="footer-content">
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
                 <ul>
-                    <li><a href="/footwear">Men</a></li>
-                    <li><a href="/clothing">Women</a></li>
-                    <li><a href="/accessories">Kids</a></li>
-                    <li><a href="/accessories">Shoes</a></li>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>SPORTS</h3>
                 <ul>
-                    <li><a href="/cricket">Cricket</a></li>
-                    <li><a href="/running">Running</a></li>
-                    <li><a href="/football">Football</a></li>
-                    <li><a href="/basketball">Basketball</a></li>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
+                    
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
             </div>
 
             <div class="footer-column">
                 <h3>SUPPORT</h3>
                 <ul>
-                    <li><a href="/help">Help</a></li>
-                    <li><a href="/customer-service">Customer Service</a></li>
-                    <li><a href="/returns">Returns & Exchanges</a></li>
-                    <li><a href="/shipping">Shipping</a></li>
+                    <li><a href="help.html">Help</a></li>
+                    <li><a href="customer.html">Customer Service</a></li>
+                    <li><a href="return.html">Returns & Exchanges</a></li>
+                    <li><a href="shipping.html">Shipping</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>COMPANY INFO</h3>
                 <ul>
-                    <li><a href="/about">About Us</a></li>
-                    <li><a href="/entity-details">Entity Details</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="entity.html">Entity Details</a></li>
                 </ul>
             </div>
             <div class="footer-column social">
@@ -183,6 +185,7 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
+
 </body>
 
 </html>
