--- a/about.html
+++ b/about.html
@@ -57,22 +57,21 @@
     <div class="header">
         <div class="header-left">
             <div class="logo">
-                <a href="s.html">
+                <a href="homepage.html">
                     <img src="logo.jpeg" alt="Athletix">
                 </a>
             </div>
             <div class="nav-menu">
-                <a href="#">Men</a>
-                <a href="#">Women</a>
-                <a href="#">Kids</a>
-                <a href="#">Shoes</a>
-                <a href="#">Sports</a>
+                <a href="men_athletix.html">Men</a>
+                <a href="women_athletix.html">Women</a>
+                <a href="kids_athletix.html">Kids</a>
+                <a href="shoes_athletix.html">Shoes</a>
             </div>
         </div>
         <div class="help-signup">
             <a href="help.html">Help</a>
-            <a href="orders.html">Orders</a>
-            <a href="login.html">Log In</a>
+            <a href="#">Orders</a>
+            <a href="signup.html">Log In</a>
             <div class="logo">
                 <a href="cart.html">
                     <img src="cart.jpeg" alt="Cart" class="cart-icon">
@@ -80,6 +79,7 @@
             </div>
         </div>
     </div>
+
 
     <div class="container">
         <h1>About Athletix</h1>
@@ -123,31 +123,36 @@
     </div>
 
     <footer>
+        <div class="promo-banner">
+            <p>JOIN Athletix AND GET 10% OFF</p>
+            <button>Sign Up for Free →</button>
+        </div>
         <div class="footer-content">
             <div class="footer-column">
                 <h3>CATEGORIES</h3>
                 <ul>
-                    <li><a href="#">Men</a></li>
-                    <li><a href="#">Women</a></li>
-                    <li><a href="#">Kids</a></li>
-                    <li><a href="#">Shoes</a></li>
+                    <li><a href="men_athletix.html">Men</a></li>
+                    <li><a href="women_athletix.html">Women</a></li>
+                    <li><a href="kids_athletix.html">Kids</a></li>
+                    <li><a href="shoes_athletix.html">Shoes</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>SPORTS</h3>
                 <ul>
-                    <li><a href="#">Cricket</a></li>
-                    <li><a href="#">Running</a></li>
-                    <li><a href="#">Football</a></li>
-                    <li><a href="#">Basketball</a></li>
+                    <li><a href="cricket_athletix.html">Cricket</a></li>
+                    
+                    <li><a href="football_athletix.html">Football</a></li>
+                    <li><a href="basketball_athletix.html">Basketball</a></li>
                 </ul>
             </div>
+
             <div class="footer-column">
                 <h3>SUPPORT</h3>
                 <ul>
                     <li><a href="help.html">Help</a></li>
-                    <li><a href="customer-service.html">Customer Service</a></li>
-                    <li><a href="returns.html">Returns & Exchanges</a></li>
+                    <li><a href="customer.html">Customer Service</a></li>
+                    <li><a href="return.html">Returns & Exchanges</a></li>
                     <li><a href="shipping.html">Shipping</a></li>
                 </ul>
             </div>
@@ -155,13 +160,13 @@
                 <h3>COMPANY INFO</h3>
                 <ul>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">Entity Details</a></li>
+                    <li><a href="entity.html">Entity Details</a></li>
                 </ul>
             </div>
             <div class="footer-column social">
                 <h3>FOLLOW US</h3>
-                <p><a href="#">📷 Instagram</a></p>
-                <p><a href="#">🐦 X (Twitter)</a></p>
+                <p><a href="https://www.instagram.com" target="_blank">📷 Instagram</a></p>
+                <p><a href="https://www.twitter.com" target="_blank">🐦‍⬛ X</a></p>
             </div>
         </div>
         <div class="footer-bottom">
@@ -169,5 +174,6 @@
             <p>©2025 ATHLETIX India Marketing Pvt. Ltd</p>
         </div>
     </footer>
+
 </body>
 </html>
