--- a/homepage.html
+++ b/homepage.html
@@ -298,15 +298,15 @@
         </h2>
         <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: space-between;">
             <a href="cricket_athletix.html" style="text-align: center; text-decoration: none; color: black;">
-                <img src="images/cricket.jpg" alt="Cricket" style="width: 200px; height: 280px; object-fit: cover;">
+                <img src="cricket.jpeg" alt="Cricket" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">CRICKET</div>
             </a>
             <a href="football_athletix.html" style="text-align: center; text-decoration: none; color: black;">
-                <img src="images/football.jpg" alt="Football" style="width: 200px; height: 280px; object-fit: cover;">
+                <img src="football.jpeg" alt="Football" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">FOOTBALL</div>
             </a>
             <a href="basketball_athletix.html" style="text-align: center; text-decoration: none; color: black;">
-                <img src="images/basketball.jpg" alt="Basketball" style="width: 200px; height: 280px; object-fit: cover;">
+                <img src="basketball.jpeg" alt="Basketball" style="width: 200px; height: 280px; object-fit: cover;">
                 <div style="margin-top: 10px; font-weight: bold; border-bottom: 2px solid black;">BASKETBALL</div>
             </a>
         </div>
