--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -277,42 +277,42 @@
         <h1>FOR THE REAL ONES</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="basketball_product1.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/1d340cb4-ddb3-4851-8a37-059ed3d80a75/LEBRON+XXII+EP.png" alt="LeBron XXII EP">
                     <h3>LeBron XXII EP</h3>
                 </a>
                 <p>₹16,999 </p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="basketball_product2.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/1ca4d5f9-4053-4dc0-801d-0368b1e7a5c6/LAL+MNK+DF+SWGMN+JSY+ASC+22.png" alt="Los Angeles Lakers Association Edition 2022/23">
                     <h3>Los Angeles Lakers Association Edition 2022/23</h3>
                 </a>
                 <p>₹5,995</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="basketball_product3.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/7f60cbde-a68f-4b52-94fe-aeee417dc756/GIANNIS+FREAK+6+EP.png" alt="Giannis Freak 6 EP">
                     <h3>Giannis Freak 6 EP"</h3>
                 </a>
                 <p>₹12,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="basketball_product4.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/17f74490-eb13-498f-9fd5-1dd306d8271b/PHX+MNK+DF+SWGMN+JSY+ASC+23.png" alt="Phoenix Suns Association Edition 2023/24">
                     <h3>Phoenix Suns Association Edition 2023/24</h3>
                 </a>
                 <p>₹5,995</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="basketball_product5.html">
                     <img src="https://contents.mediadecathlon.com/p2705063/cbcf10d75769ff2ce993d1bf3079f8d8/p2705063.jpg?format=auto&quality=70&f=1024x0" alt="Adult Basketball BT500 Grip Size 7 - Brown/Orange">
                     <h3>Adult Basketball BT500 Grip Size 7 - Brown/Orange</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="basketball_product6.html">
                     <img src="https://contents.mediadecathlon.com/p2439549/65c77e53b85c61bd89fa51d68ec49379/p2439549.jpg?format=auto&quality=70&f=1024x0" alt="Basketball air pump">
                     <h3>Basketball air pump</h3>
                 </a>
