--- a/football_athletix.html
+++ b/football_athletix.html
@@ -276,42 +276,42 @@
         <h1>More Goals with Athletix</h1>
         <div class="product-grid">
             <div class="product-card">
-                <a href="product1.html">
+                <a href="football_product1.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b4e36fa3-7a09-463d-ba35-0aff51968a97/LFC+M+NK+DF+JSY+SS+STAD+HM.png" alt="Liverpool F.C. 2024/25 Stadium Home">
                     <h3>Liverpool F.C. 2024/25 Stadium Home</h3>
                 </a>
                 <p>₹4,695 </p>
             </div>
             <div class="product-card">
-                <a href="product2.html">
+                <a href="football_product2.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/3edb7009-57af-4070-9ab9-69e18d85670c/PSG+M+NK+DF+JSY+SS+STAD+HM.png" alt="Paris Saint-Germain 2024/25 Stadium Home">
                     <h3>Paris Saint-Germain 2024/25 Stadium Home</h3>
                 </a>
                 <p>₹4,695</p>
             </div>
             <div class="product-card">
-                <a href="product3.html">
+                <a href="football_product3.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/687f2343-d511-420b-ba41-02d954765a7e/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" alt="F.C. Barcelona Academy Pro Third">
                     <h3>F.C. Barcelona Academy Pro Third</h3>
                 </a>
                 <p>₹3,999</p>
             </div>
             <div class="product-card">
-                <a href="product4.html">
+                <a href="football_product4.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/ee259045-c1d3-4aab-9bf6-ed79bbcf4a56/ZM+VAPOR+16+ELITE+KM+FG.png" alt='Nike Mercurial Vapor 16 Elite "Kylian Mbappé"'>
                     <h3>Nike Mercurial Vapor 16 Elite "Kylian Mbappé"</h3>
                 </a>
                 <p>₹22,925</p>
             </div>
             <div class="product-card">
-                <a href="product5.html">
+                <a href="football_product5.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/704fa294-9e65-42c1-9716-024d2996aaff/SIG+ATHLETE+-+SU25.png" alt="Kylian Mbappé Academy">
                     <h3>Kylian Mbappé Academy</h3>
                 </a>
                 <p>₹1,499</p>
             </div>
             <div class="product-card">
-                <a href="product6.html">
+                <a href="football_product6.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/faec394a-9c71-403a-a42c-2e5e9cdb4cf0/NK+SIGNATURE+MERC+LITE+GRD.png" alt="Nike Mercurial Dream Speed Lite Shin Guards">
                     <h3>Nike Mercurial Dream Speed Lite Shin Guards</h3>
                 </a>
