--- a/shoes_athletix.html
+++ b/shoes_athletix.html
@@ -11,6 +11,7 @@
        body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #000;
         }
 
         .header {
@@ -239,6 +240,14 @@
             width: 30px;
             object-fit: contain;
         }
+
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
     </style>
 </head>
 
@@ -269,8 +278,10 @@
         </div>
     </div>
 
+    <h1 class="collection-heading">Shoes Collection</h1>
+
     <div class="main-content">
-        <h1>Shoes Collection</h1>
+        
         <div class="product-grid">
             <div class="product-card">
                 <a href="shoes_product1.html">
