--- a/basketball_athletix.html
+++ b/basketball_athletix.html
@@ -11,6 +11,7 @@
        body {
             margin: 0;
             font-family: Arial, sans-serif;
+            background-color: #000;
         }
 
         .header {
@@ -240,6 +241,13 @@
             object-fit: contain;
         }
 
+        .collection-heading {
+            text-align: center;
+            font-size: 3em;
+            margin: 40px 0 20px;
+            color: white;
+            background-color: #000;
+        }
         
     </style>
 </head>
@@ -273,8 +281,10 @@
 
     </div>
 
+    <h1 class="collection-heading">FOR THE REAL ONES</h1>
+
     <div class="main-content">
-        <h1>FOR THE REAL ONES</h1>
+        
         <div class="product-grid">
             <div class="product-card">
                 <a href="basketball_product1.html">
