--- a/cricket_product2.html
+++ b/cricket_product2.html
@@ -393,9 +393,10 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart()">Add to Bag</button>
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="602" data-name="Nike Kids T-shirt" data-price="129.99">
+  		        Add to Bag
+	        </button>
         </div>
-
         
       </div>
     </div>
