--- a/basketball_product1.html
+++ b/basketball_product1.html
@@ -375,10 +375,10 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Basketball T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Nike XXII LeBron EP</h1>
+        <h2>16000.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Basketball T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Worn by the GOAT himself, inspired to inspire.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,7 +388,7 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
           </div>
         </div>
 
