--- a/football_product1.html
+++ b/football_product1.html
@@ -367,8 +367,8 @@
         <img id="mainImage" class="main-image" src="https://store.liverpoolfc.com/media/catalog/product/p/l/plwin_mens_match_1.jpg" alt="Liverpool 24-25 home kit" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://store.liverpoolfc.com/media/catalog/product/m/e/mens-match_back.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ3z3f9V0xiKIjw3Y2DQVy4yTnzJQK_VZuJA&s" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail active" src="https://store.liverpoolfc.com/media/catalog/product/m/e/mens-match_back.jpg" onclick="changeImage(this)" alt="Liverpool kit Front View">
+          <img class="thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ3z3f9V0xiKIjw3Y2DQVy4yTnzJQK_VZuJA&s" onclick="changeImage(this)" alt="Liverpool kit back View">
           <img class="thumbnail" src="https://kitnation.co.za/cdn/shop/files/IMG_8639_400x.jpg?v=1721211465" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
           <img class="thumbnail" src="https://www.icons.com/media/catalog/product/cache/15cebca97e59bef64f61d5558d86d273/i/3/i3470_-_trent_alexander-arnold_back_signed_liverpool_2024-25_home_shirt_-_icons_1.webp" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
