--- a/football_product1.html
+++ b/football_product1.html
@@ -364,13 +364,13 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://store.liverpoolfc.com/media/catalog/product/p/l/plwin_mens_match_1.jpg" alt="Liverpool 24-25 home kit" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b4e36fa3-7a09-463d-ba35-0aff51968a97/LFC+M+NK+DF+JSY+SS+STAD+HM.png" alt="Liverpool 24-25 home kit" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://store.liverpoolfc.com/media/catalog/product/m/e/mens-match_back.jpg" onclick="changeImage(this)" alt="Liverpool kit Front View">
-          <img class="thumbnail" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJ3z3f9V0xiKIjw3Y2DQVy4yTnzJQK_VZuJA&s" onclick="changeImage(this)" alt="Liverpool kit back View">
-          <img class="thumbnail" src="https://kitnation.co.za/cdn/shop/files/IMG_8639_400x.jpg?v=1721211465" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://www.icons.com/media/catalog/product/cache/15cebca97e59bef64f61d5558d86d273/i/3/i3470_-_trent_alexander-arnold_back_signed_liverpool_2024-25_home_shirt_-_icons_1.webp" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b4e36fa3-7a09-463d-ba35-0aff51968a97/LFC+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Liverpool kit Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/6bcad269-303c-4c01-8255-7d7e78b1db9e/LFC+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Liverpool kit back View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/7cd91c34-743e-4db6-812d-56019cfdcf0f/LFC+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/90413469-ebac-4c2d-893b-cfaf359f07d0/LFC+M+NK+DF+JSY+SS+STAD+HM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
